
* Added a new tactic, `pick`, that has this syntax:

        pick x y (z:ty), F.

  The tactic tries to solve `exists x y (z:ty), F` automaticall, and if
  it succeeds it adds the bindings for `x`, `y`, etc. You can then use them
  in the rest of the proof. To bound the automatic search, you can use the
  form

        pick <num> x y (z:ty), F.

* Added a new tactic form for `backchain`:

        backchain <num> <hyp_or_lemma>.

  where the `<num>`, which is optional, can give a depth bound to the search
  that is automatically attempted on generated goals. Give it a depth of 0
  if you want to prevent searching. The default value is the value of the
  search_depth flag.

* Added a new command line flag `-f` that takes a comma-separated list of
  key=value pairs and initializes the flags based on them. For flags that
  can be set to `on`/`off`, you can just use the key and it means to set
  them to `on`. For example, `-f subgoals=off,witnesses` sets `subgoals` to
  `off` and `witnesses` to `on`.

* Extended the `subgoals` flag to take a _subgoal specification string_
  argument that can be used to fine tune the subgoals to display. As an
  example, the invocation:

        Set subgoals "0[0];1[2];2[3];3;4[10]".

  instructs Abella to show 0 additinoal subgoals at depth 0, max 2
  additional subgoals at 1, max 3 additional subgoals at depth 2, all
  subgoals at depth 3, and max 10 subgoals at depth 4. The depths need not
  be given in order, and any omitted depths display the default number of
  subgoals. The default flags `on`, `off`, and an _unquoted_ number have the
  following meanings:

  * `on` : the same as `"0[∞];1[∞];…"`
  * `off` : the same as `"0[0];1[0];…"`
  * `n` : the same as `"0[0];̣…;n-1[0];n[∞];n+1[0];…"`

Tweaks to existing functionality

* Import declarations automatically compile if needed. An explicit Makefile
  is very rarely needed any more.


Bugfixes

* Annotation mode (-a) output is no longer printed in other modes